[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
name = "mp4batch"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
av-data = "0.4.1"
clap = { version = "4.0.8", features = ["derive"] }
dotenvy_macro = "0.15"
itertools = "0.14"
lexical-sort = "0.3"
nom = "8.0.0"
once_cell = "1.14.0"
path-clean = "1.0.1"
regex = "1.6.0"
signal-hook = "0.3.17"
size = "0.5"
vapoursynth = { version = "0.4.0", features = [
    "vsscript-functions",
    "vapoursynth-api-36",
    "vsscript-api-32",
] }
walkdir = "2"
which = "7.0.0"

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[profile.release]
lto = "thin"
codegen-units = 1
